moved client connection update to the right

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -79,6 +79,11 @@ body {
   top: 0;
 }
 
+.navbar p {
+  text-align: right;
+  padding: .5em;
+}
+
 .navbar-brand {
   color: inherit;
   display: block;
